crates/solidity/testing/snapshots/bindings_output/built_ins/shadowing/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[input.sol:14:1]
    │
 14 │ ╭─▶ function sha256() {}
    ┆ ┆   
 18 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (5):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["tx" @ input.sol:2:9] (state var, type: int256)
- Def: #3 ["test" @ input.sol:4:14] (function, type: function () returns void)
- Def: #4 ["block" @ input.sol:5:13] (variable, type: int256)
- Def: #5 ["sha256" @ input.sol:11:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (3):
- Ref: ["block" @ input.sol:6:9] -> #4
- Ref: ["tx" @ input.sol:7:9] -> #2
- Ref: ["sha256" @ input.sol:8:9] -> #5

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     int tx;
    │         ─┬  
    │          ╰── name: 2
    │ 
  4 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 3
  5 │         int block;
    │             ──┬──  
    │               ╰──── name: 4
  6 │         block;
    │         ──┬──  
    │           ╰──── ref: 4
  7 │         tx;
    │         ─┬  
    │          ╰── ref: 2
  8 │         sha256();
    │         ───┬──  
    │            ╰──── ref: 5
    │ 
 11 │     function sha256() public {}
    │              ───┬──  
    │                 ╰──── name: 5
────╯
